--- a/src/App.css
+++ b/src/App.css
@@ -714,7 +714,7 @@ h6 {
   padding: 9px 14px 10px;
   line-height: 1.4;
   color: var(--scholime);
-  border: 1px solid rgb(219 240 147 / 13%);
+  border: 1px solid rgb(219 240 147 / 50%);
 }
 
 .proj-links li a:hover {
@@ -1252,7 +1252,7 @@ footer {
     font-size: 1rem;
   }
   .header {
-    padding: 1rem 0 1.3rem;
+    padding: 0.5rem 0 1rem;
   }
   .categories {
     margin-bottom: 0.7rem;
@@ -1284,12 +1284,13 @@ footer {
   .proj-links li a {
     font-size: 0.88rem;
     letter-spacing: 0.1rem;
-    padding: 0.6rem 1.2rem;
+    padding: 0.8rem 1.2rem;
     justify-content: space-between;
     gap: 20px;
   }
   .proj-links {
     margin-top: 1rem;
+    gap: 20px;
   }
   .home .project {
     padding: 2rem 0 0.5rem;
