add nav padding

--- a/src/App.css
+++ b/src/App.css
@@ -836,7 +836,7 @@ h6 {
 
 .p-desc {
   font-family: "neue-haas-grotesk-text", sans-serif;
-  color: #b8bdbf;
+  color: #bfc3c5;
   margin-bottom: 0;
   line-height: 1.4;
 }
@@ -1235,6 +1235,9 @@ footer {
     line-height: 1.1;
     margin-bottom: 12px !important;
   }
+  .card-img {
+    min-height: auto;
+  }
   .navbar {
     background-color: #2c2f32;
   }
@@ -1255,7 +1258,7 @@ footer {
     font-size: 1rem;
   }
   .header {
-    padding: 0.5rem 0 1rem;
+    padding: 0 0 1rem;
   }
   .categories {
     margin-bottom: 0.7rem;
@@ -1293,7 +1296,7 @@ footer {
     gap: 20px;
   }
   .proj-links {
-    margin-top: 1rem;
+    margin-top: 0.8rem;
     gap: 20px;
   }
   .home .project {
@@ -1302,7 +1305,7 @@ footer {
   }
   .p-title {
     font-size: 1.3rem;
-    margin-bottom: 0.35rem;
+    margin-bottom: 0.25rem;
   }
   .p-desc {
     font-size: 1rem;
