--- a/src/App.css
+++ b/src/App.css
@@ -1072,7 +1072,8 @@ a.email-big {
   font-size: 16px;
 }
 
-h1.mb-3 {
+h1.mb-3,
+h2.mb-3 {
   font-size: 2.6rem;
 }
 
@@ -1319,10 +1320,7 @@ footer {
     color: #453e38;
   }
   .profile {
-    padding-top: 3rem;
-  }
-  .profile h2 {
-    font-size: 2.8rem;
+    padding-top: 1rem;
   }
   .contact footer.mt-5 {
     margin-top: 0 !important;
