--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,30 @@ body {
 }
 
 .container {
+  width: 80%;
   max-width: 1400px;
+}
+nav .container {
+  max-width: 100%;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+/* @media screen and (min-width: 1200px) and (max-width: 1439px) {
+  .container {
+    max-width: 1000px;
+  }
+  nav .container {
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 6px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1400px;
+  }
   nav .container {
     max-width: 1920px;
     padding-left: 60px;
@@ -15,7 +35,7 @@ body {
   .navbar-nav {
     align-items: flex-end;
   }
-}
+} */
 
 :focus-visible,
 .hamburger-react:focus-visible,
