mobile responsive styles

--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,16 @@
 body {
   overflow-y: scroll;
 }
-
-.container {
-  width: 80%;
-  max-width: 1400px;
-}
-nav.navbar .container-fluid {
+nav.navbar .container-xxl {
   padding-left: 2%;
   padding-right: 1.5%;
   align-items: flex-start;
+}
+
+@media only screen and (min-width: 1400px) {
+  nav.navbar .container-xxl {
+    max-width: 1920px;
+  }
 }
 
 :focus-visible,
@@ -167,7 +168,7 @@ a:hover {
 .theme-toggle {
   min-width: 48px;
   min-height: 48px;
-  margin-right: 6px;
+  margin-right: 8px;
 }
 
 .nav-link {
@@ -1043,6 +1044,19 @@ footer {
 }
 
 /* Media Queries */
+@media only screen and (min-width: 600px) and (max-width: 991px) {
+  .header {
+    padding-top: 2rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+    width: 80%;
+    max-width: 1400px;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   .home-contact {
     display: flex;
@@ -1060,14 +1074,9 @@ footer {
   }
 }
 
-@media only screen and (max-width: 599px) {
-  h1.mb-3 {
-    font-size: 2.3rem;
-    line-height: 1.1;
-    margin-bottom: 12px !important;
-  }
-  .p-card-img {
-    min-height: auto;
+@media only screen and (max-width: 992px) {
+  .page {
+    margin-top: 88px;
   }
   .navbar {
     background-color: #2c2f32;
@@ -1087,6 +1096,17 @@ footer {
   }
   .proj-nav-body {
     font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  h1.mb-3 {
+    font-size: 2.3rem;
+    line-height: 1.1;
+    margin-bottom: 12px !important;
+  }
+  .p-card-img {
+    min-height: auto;
   }
   .header {
     padding: 0 0 1rem;
@@ -1179,8 +1199,5 @@ footer {
   }
   .social-icons i {
     font-size: 1.7rem;
-  }
-  .page {
-    margin-top: 88px;
   }
 }
