--- a/src/App.css
+++ b/src/App.css
@@ -1134,7 +1134,7 @@ footer {
     justify-content: flex-start;
   }
   .cs-caption p {
-    line-height: 1.4rem;
+    line-height: 1.4;
     font-size: 16px;
   }
   #btn-back-to-top {
