--- a/src/App.css
+++ b/src/App.css
@@ -62,9 +62,9 @@ body {
 }
 
 main {
-  background: var(--schodark);
+  background-color: var(--schodark);
   color: var(--scholight);
-  /* transition: all 0.4s ease; */
+  transition: background-color 0.4s, color 0.4s;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -73,15 +73,15 @@ main {
 }
 
 main.light-mode {
-  background: var(--schopearl);
+  background-color: var(--schopearl);
   color: var(--schoonyx);
-  /* transition: all 0.4s ease; */
+  transition: background-color 0.4s, color 0.4s;
 }
 
 a {
   color: var(--scholime);
   text-decoration: underline var(--scholime);
-  /* transition: all 0.3s; */
+  transition: color 0.3s, text-decoration 0.3s;
   text-underline-offset: 3px;
 }
 
