--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,6 @@ body {
   overflow-y: scroll;
 }
 nav.navbar .container-xxl {
-  padding-left: 2%;
-  padding-right: 1.5%;
   align-items: flex-start;
 }
 
@@ -1062,9 +1060,12 @@ footer {
     margin-bottom: 0.5rem;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 577px) {
   .container,
-  .container-sm {
+  .container-sm,
+  .container-xxl {
+    padding-left: 2%;
+    padding-right: 1.5%;
     max-width: 94%;
   }
   .footer-text {
@@ -1076,9 +1077,23 @@ footer {
     --bs-gutter-x: 1.5rem;
   }
 }
-@media only screen and (min-width: 600px) and (max-width: 991px) {
+@media only screen and (min-width: 576px) and (max-width: 991px) {
   .header {
     padding-top: 2rem;
+  }
+  .p-title {
+    font-size: 1.1rem;
+  }
+  .p-desc {
+    font-size: 0.9rem;
+    line-height: 1.34;
+  }
+  h1 {
+    font-size: 6rem;
+  }
+  .home .intro {
+    font-size: 1.15rem;
+    line-height: 1.42;
   }
 }
 
@@ -1108,8 +1123,11 @@ footer {
     padding: 2rem 0;
   } */
 }
+/* @media only screen and (max-width: 992px) {
 
-@media only screen and (max-width: 992px) {
+} */
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
   .page {
     margin-top: 88px;
   }
@@ -1126,8 +1144,8 @@ footer {
     background-color: #d1cbc7;
   }
   .navbar.py-3 {
-    padding-top: 8px !important;
-    padding-bottom: 8px !important;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
   }
   #menu .navbar-nav .nav-link:not(.sub-link) {
     padding: 6px;
@@ -1246,5 +1264,9 @@ footer {
   }
   .social-icons i {
     font-size: 1.7rem;
+  }
+  .navbar.py-3 {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
   }
 }
