--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ nav.navbar .container-xxl {
   align-items: flex-start;
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 992px) {
   nav.navbar .container-xxl {
     max-width: 1920px;
   }
@@ -288,6 +288,7 @@ button.g2:hover,
   list-style: none;
   margin-top: 2px;
   margin-bottom: 2px;
+  background-color: var(--schodark);
 }
 
 .light-mode .proj-nav-body {
@@ -548,6 +549,10 @@ h6 {
   font-size: 1.3rem;
 }
 
+.home .intro:first-child {
+  margin-bottom: 0;
+}
+
 .header {
   padding: 1rem 0;
 }
@@ -557,7 +562,7 @@ h6 {
   bottom: 65px;
   right: 10px;
   color: var(--schodark);
-  /* transition: all 0.4s; */
+  transition: position 0.4s;
 }
 
 .light-mode #btn-back-to-top {
@@ -1060,77 +1065,7 @@ footer {
     margin-bottom: 0.5rem;
   }
 }
-@media (min-width: 577px) {
-  .container,
-  .container-sm,
-  .container-xxl {
-    padding-left: 2%;
-    padding-right: 1.5%;
-    max-width: 94%;
-  }
-  .footer-text {
-    justify-content: space-between;
-  }
-}
-@media only screen and (min-width: 1400px) {
-  #case-studies.gx-3 {
-    --bs-gutter-x: 1.5rem;
-  }
-}
-@media only screen and (min-width: 576px) and (max-width: 991px) {
-  .header {
-    padding-top: 2rem;
-  }
-  .p-title {
-    font-size: 1.1rem;
-  }
-  .p-desc {
-    font-size: 0.9rem;
-    line-height: 1.34;
-  }
-  h1 {
-    font-size: 6rem;
-  }
-  .home .intro {
-    font-size: 1.15rem;
-    line-height: 1.42;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  .container {
-    width: 80%;
-    max-width: 1400px;
-  }
-  .header {
-    padding: 5rem 0;
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .home-contact {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 260px;
-    max-width: 60%;
-    margin: 0 auto;
-    padding: 2rem 10%;
-    border: 2px solid var(--schogrey);
-  }
-
-  /* .cs-caption {
-    padding: 2rem 0;
-  } */
-}
-/* @media only screen and (max-width: 992px) {
-
-} */
-
-@media only screen and (min-width: 600px) and (max-width: 992px) {
-  .page {
-    margin-top: 88px;
-  }
+@media (max-width: 992px) {
   .navbar {
     background-color: #2c2f32;
   }
@@ -1150,11 +1085,80 @@ footer {
   #menu .navbar-nav .nav-link:not(.sub-link) {
     padding: 6px;
   }
+  .page {
+    margin-top: 88px;
+  }
+}
+@media (min-width: 577px) {
+  .container,
+  .container-sm {
+    max-width: 94%;
+  }
+  .container-xxl {
+    padding-left: 2%;
+    padding-right: 1.5%;
+  }
+  .footer-text {
+    justify-content: space-between;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  #case-studies.gx-3 {
+    --bs-gutter-x: 1.5rem;
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 991px) {
+  .header {
+    padding-top: 2rem;
+  }
+  .p-title {
+    font-size: 1.1rem;
+  }
+  .p-desc {
+    font-size: 0.9rem;
+    line-height: 1.34;
+  }
+  h1 {
+    font-size: 6.2rem;
+  }
+  .home .intro {
+    font-size: 1.15rem;
+    line-height: 1.42;
+  }
+  .home-contact {
+    max-width: 80%;
+  }
+
   .proj-nav-body {
     font-size: 1rem;
   }
   .cs-caption p {
     line-height: 1.4;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+    width: 80%;
+    max-width: 1400px;
+  }
+  .header {
+    padding: 5rem 0;
+  }
+  .home-contact {
+    max-width: 64%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .home-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 260px;
+    margin: 0 auto;
+    padding: 2rem 10%;
+    border: 2px solid var(--schogrey);
   }
 }
 
