--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,8 @@ nav.navbar .container-xxl {
   --scholapis: #1476b3;
   --schoteal: #2ca58d;
   --schoapple: #a2bd4a;
+
+  text-rendering: optimizeLegibility;
 }
 
 html,
@@ -601,7 +603,7 @@ h6 {
   letter-spacing: 0.07rem;
   font-size: 0.74rem;
   font-weight: 500;
-  font-family: "forma-djr-mono", sans-serif;
+  font-family: "forma-djr-mono", monospace;
   display: flex;
   text-decoration: none;
   justify-content: space-between;
@@ -638,6 +640,7 @@ h6 {
   background-color: var(--schogrey);
   margin-bottom: 0.75rem;
   padding: 10px;
+  position: relative;
 }
 
 .light-mode .p-card-img {
@@ -648,6 +651,29 @@ h6 {
   max-width: 100%;
   height: auto;
   border-radius: 6px;
+}
+
+.react {
+  font-family: "forma-djr-mono", monospace;
+  text-transform: uppercase;
+  font-size: 0.77rem;
+  letter-spacing: 0.025rem;
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  position: absolute;
+  top: 5.5%;
+  right: 3.5%;
+  color: var(--schopearl);
+  background-color: var(--schoiris);
+  padding: 3px 6px;
+  border-radius: 9px;
+  line-height: 1;
+}
+
+.react i {
+  padding-top: 1px;
+  font-weight: 500;
 }
 
 .card-text {
@@ -979,7 +1005,7 @@ h2.mb-3 {
 }
 
 .tech {
-  font-family: "forma-djr-mono";
+  font-family: "forma-djr-mono", monospace;
   font-size: 0.86rem;
   letter-spacing: 0.0125rem;
   color: var(--schoaccent);
