--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ nav.navbar .container-xxl {
 
 @media only screen and (min-width: 992px) {
   nav.navbar .container-xxl {
-    max-width: 1920px;
+    max-width: 1840px;
   }
 }
 
@@ -656,7 +656,6 @@ h6 {
 .p-card-img img {
   max-width: 100%;
   height: auto;
-  border-radius: 6px;
 }
 
 .react {
@@ -686,8 +685,20 @@ h6 {
   padding-left: 6px;
 }
 
+/* .card-text {
+  background: linear-gradient(#ffffff00, #000000), rgba(0, 0, 0, 0);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-left: 8px;
+  padding-bottom: 8px;
+  bottom: 114px;
+  height: 100px;
+  justify-content: flex-end;
+} */
+
 .p-title {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 500;
   margin-bottom: 0.23rem;
   color: var(--scholight);
@@ -703,7 +714,7 @@ h6 {
   color: #bfc3c5;
   margin-bottom: 0;
   line-height: 1.4;
-  font-size: 16px;
+  font-size: 0.94rem;
 }
 
 .light-mode .p-desc {
@@ -940,6 +951,7 @@ h2.mb-3 {
 }
 
 .intro {
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 
@@ -948,8 +960,16 @@ h2.mb-3 {
   transition: all 0.6s;
 }
 
-.design .proj-img:hover {
-  transform: scale(1.02);
+.p-card-img {
+  overflow: hidden;
+}
+
+.p-card-img img {
+  transition: all 0.6s;
+}
+
+.p-card-img img:hover {
+  transform: scale(1.05);
 }
 
 .categories {
@@ -1099,8 +1119,19 @@ footer {
   .light-mode .bio {
     border-right: 2px dotted var(--schostone);
   }
-  .cs-caption {
+  .cs-caption p {
     font-size: 17px;
+  }
+}
+@media only screen and (min-width: 1760px) {
+  .proj-tagline {
+    font-size: 1.2rem;
+  }
+  .project-page .intro {
+    font-size: 18px;
+  }
+  .project-page.container {
+    margin-top: 5em;
   }
 }
 @media (min-width: 670px) {
@@ -1158,10 +1189,10 @@ footer {
   .container-sm {
     max-width: 94%;
   }
-  .container-xxl {
+  /* .container-xxl {
     padding-left: 2%;
     padding-right: 1.5%;
-  }
+  } */
   .footer-text {
     justify-content: space-between;
   }
@@ -1210,10 +1241,16 @@ footer {
     max-width: 1840px;
   }
   .header {
-    padding: 8em 0 2em;
+    padding: 9em 0 3em;
   }
   .home-contact {
     max-width: 60%;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  .header {
+    padding: 12em 0 5em;
   }
 }
 
@@ -1240,7 +1277,7 @@ footer {
     bottom: 18px;
   }
   h1.mb-3 {
-    font-size: 2.3rem;
+    font-size: 1.85rem;
     line-height: 1.1;
     margin-bottom: 12px !important;
   }
@@ -1251,7 +1288,7 @@ footer {
     padding: 0 0 1rem;
   }
   .categories {
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.2em;
   }
   .intro,
   .cs-caption {
@@ -1306,14 +1343,10 @@ footer {
   .about-img {
     display: none;
   }
-  .project-page h1 {
-    font-size: 2rem;
-  }
   .project-page p {
     line-height: 1.3;
   }
   .project-page .intro {
-    font-size: 0.9rem;
     margin-bottom: 1.3rem;
   }
   .plink-cont {
